--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  
+    <link rel="icon" href="https://media.istockphoto.com/id/2153651306/photo/3d-rendering-of-ambulance-on-blue-background.jpg?s=1024x1024&w=is&k=20&c=5H8WbPTGNKHSzegKojifM3Mh3AJVhJnWNmpuRMceh7E=" type="image/png" style="border-radius:50%;">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
